YIM25: Fix music buddies grid wrapping
+ cleanup unused css

--- a/frontend/css/sass/year-in-music.scss
+++ b/frontend/css/sass/year-in-music.scss
@@ -138,21 +138,6 @@ $transition-duration: 1s;
     }
   }
 
-  /* "Save as image" component */
-  #savable-release-component {
-    width: 500px;
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 10px;
-      align-items: center;
-      justify-items: center;
-      img {
-        max-width: 100%;
-      }
-    }
-  }
-
   .no-yim-message {
     margin: 4vh auto;
     font-family: "Roboto", sans-serif;
@@ -379,7 +364,7 @@ $transition-duration: 1s;
   }
   .similar-users-list {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
   .section {
     margin-top: 4em;
